# serializer version: 1
# name: test_ft_prescriber_with_no_ft_organization
  '''
  <div class="s-section__container container">
      <div class="s-section__row row g-0">
          <div class="s-section__col col-12 col-lg-2 bg-lg-white">
              <img alt="" class="img-fluid" loading="lazy" src="/static/img/illustration-error.png"/>
          </div>
          <div class="s-section__col col-12 col-lg-10 bg-lg-white">
              <p>
                  En tant qu’agent France Travail vous devez appartenir à une agence pour vous connecter aux Emplois de l’inclusion.
              </p>
              <p>
                  Veuillez vous faire inviter par un collaborateur de votre agence afin d’accéder au service.
              </p>
              <div class="row">
                  <div class="col-2">
                      <form action="/accounts/logout/" class="js-prevent-multiple-submit" method="post">
                          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                          <button aria-label="Se déconnecter" class="btn btn-block btn-primary" type="submit">
                              <span>
                                  Se déconnecter
                              </span>
                          </button>
                      </form>
                  </div>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: tests_employers_with_inactive_company
  '''
  <div class="s-section__container container">
      <div class="s-section__row row g-0">
          <div class="s-section__col col-12 col-lg-2 bg-lg-white">
              <img alt="" class="img-fluid" loading="lazy" src="/static/img/illustration-error.png"/>
          </div>
          <div class="s-section__col col-12 col-lg-10 bg-lg-white">
              <p>
                  L’accès aux fonctionnalités professionnelles est réservé aux comptes associés à une structure active.
              </p>
              <ul>
                  <li>
                      Si vous avez changé d’adresse e-mail et que vous souhaitez retrouver l’accès à votre compte existant, vous pouvez utiliser
                      <a class="btn-link" href="https://tally.so/r/npPpNq">
                          ce formulaire d’aide
                      </a>
                      .
                  </li>
                  <li>
                      Si votre compte était précédemment rattaché à une structure : celle-ci peut être désormais inactive (par exemple en cas de déconventionnement).
                  </li>
                  <li>
                      Si vous avez tenté de vous inscrire en tant que facilitateur des clauses sociales, votre statut est actuellement en cours de vérification, nous reviendrons vers vous dans les plus brefs délais.
                  </li>
                  <li>
                      Si vous souhaitez rejoindre une structure présente sur les Emplois de l’inclusion, vous pouvez demander à un de vos collègues de vous inviter.
                  </li>
                  <li>
                      <form action="/accounts/logout/?next=/signup/" class="js-prevent-multiple-submit" method="post">
                          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                          Si votre structure ne dispose pas encore d’un espace professionnel sur Les Emplois de l’inclusion et que vous souhaitez en créer un :
                          <button aria-label="Se déconnecter" class="btn-link" type="submit">
                              cliquez-ici
                          </button>
                          .
                      </form>
                  </li>
              </ul>
              <p>
                  En cas de besoin, vous pouvez
                  <a class="btn-link has-external-link" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr" target="_blank">
                      contacter notre support technique
                  </a>
                  .
              </p>
              <p>
                  Nous espérons vous revoir et vous rendre service à nouveau.
              </p>
              <div class="row">
                  <div class="col-2">
                      <form action="/accounts/logout/" class="js-prevent-multiple-submit" method="post">
                          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                          <button aria-label="Se déconnecter" class="btn btn-block btn-primary" type="submit">
                              <span>
                                  Se déconnecter
                              </span>
                          </button>
                      </form>
                  </div>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: tests_pro_without_organization
  '''
  <div class="s-section__container container">
      <div class="s-section__row row g-0">
          <div class="s-section__col col-12 col-lg-2 bg-lg-white">
              <img alt="" class="img-fluid" loading="lazy" src="/static/img/illustration-error.png"/>
          </div>
          <div class="s-section__col col-12 col-lg-10 bg-lg-white">
              <p>
                  L’accès aux fonctionnalités professionnelles est réservé aux comptes associés à une structure active.
              </p>
              <ul>
                  <li>
                      Si vous avez changé d’adresse e-mail et que vous souhaitez retrouver l’accès à votre compte existant, vous pouvez utiliser
                      <a class="btn-link" href="https://tally.so/r/npPpNq">
                          ce formulaire d’aide
                      </a>
                      .
                  </li>
                  <li>
                      Si votre compte était précédemment rattaché à une structure : celle-ci peut être désormais inactive (par exemple en cas de déconventionnement).
                  </li>
                  <li>
                      Si vous avez tenté de vous inscrire en tant que facilitateur des clauses sociales, votre statut est actuellement en cours de vérification, nous reviendrons vers vous dans les plus brefs délais.
                  </li>
                  <li>
                      Si vous souhaitez rejoindre une structure présente sur les Emplois de l’inclusion, vous pouvez demander à un de vos collègues de vous inviter.
                  </li>
                  <li>
                      <form action="/accounts/logout/?next=/signup/" class="js-prevent-multiple-submit" method="post">
                          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                          Si votre structure ne dispose pas encore d’un espace professionnel sur Les Emplois de l’inclusion et que vous souhaitez en créer un :
                          <button aria-label="Se déconnecter" class="btn-link" type="submit">
                              cliquez-ici
                          </button>
                          .
                      </form>
                  </li>
              </ul>
              <p>
                  En cas de besoin, vous pouvez
                  <a class="btn-link has-external-link" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr" target="_blank">
                      contacter notre support technique
                  </a>
                  .
              </p>
              <p>
                  Nous espérons vous revoir et vous rendre service à nouveau.
              </p>
              <div class="row">
                  <div class="col-2">
                      <form action="/accounts/logout/" class="js-prevent-multiple-submit" method="post">
                          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                          <button aria-label="Se déconnecter" class="btn btn-block btn-primary" type="submit">
                              <span>
                                  Se déconnecter
                              </span>
                          </button>
                      </form>
                  </div>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: tests_pro_without_organization.1
  '''
  <div class="s-section__container container">
      <div class="s-section__row row g-0">
          <div class="s-section__col col-12 col-lg-2 bg-lg-white">
              <img alt="" class="img-fluid" loading="lazy" src="/static/img/illustration-error.png"/>
          </div>
          <div class="s-section__col col-12 col-lg-10 bg-lg-white">
              <p>
                  L’accès aux fonctionnalités professionnelles est réservé aux comptes associés à une structure active.
              </p>
              <ul>
                  <li>
                      Si vous avez changé d’adresse e-mail et que vous souhaitez retrouver l’accès à votre compte existant, vous pouvez utiliser
                      <a class="btn-link" href="https://tally.so/r/npPpNq">
                          ce formulaire d’aide
                      </a>
                      .
                  </li>
                  <li>
                      Si votre compte était précédemment rattaché à une structure : celle-ci peut être désormais inactive (par exemple en cas de déconventionnement).
                  </li>
                  <li>
                      Si vous avez tenté de vous inscrire en tant que facilitateur des clauses sociales, votre statut est actuellement en cours de vérification, nous reviendrons vers vous dans les plus brefs délais.
                  </li>
                  <li>
                      Si vous souhaitez rejoindre une structure présente sur les Emplois de l’inclusion, vous pouvez demander à un de vos collègues de vous inviter.
                  </li>
                  <li>
                      <form action="/accounts/logout/?next=/signup/" class="js-prevent-multiple-submit" method="post">
                          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                          Si votre structure ne dispose pas encore d’un espace professionnel sur Les Emplois de l’inclusion et que vous souhaitez en créer un :
                          <button aria-label="Se déconnecter" class="btn-link" type="submit">
                              cliquez-ici
                          </button>
                          .
                      </form>
                  </li>
              </ul>
              <p>
                  En cas de besoin, vous pouvez
                  <a class="btn-link has-external-link" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr" target="_blank">
                      contacter notre support technique
                  </a>
                  .
              </p>
              <p>
                  Nous espérons vous revoir et vous rendre service à nouveau.
              </p>
              <div class="row">
                  <div class="col-2">
                      <form action="/accounts/logout/" class="js-prevent-multiple-submit" method="post">
                          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                          <button aria-label="Se déconnecter" class="btn btn-block btn-primary" type="submit">
                              <span>
                                  Se déconnecter
                              </span>
                          </button>
                      </form>
                  </div>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: tests_pro_without_organization.2
  '''
  <div class="s-section__container container">
      <div class="s-section__row row g-0">
          <div class="s-section__col col-12 col-lg-2 bg-lg-white">
              <img alt="" class="img-fluid" loading="lazy" src="/static/img/illustration-error.png"/>
          </div>
          <div class="s-section__col col-12 col-lg-10 bg-lg-white">
              <p>
                  L’accès aux fonctionnalités professionnelles est réservé aux comptes associés à une structure active.
              </p>
              <ul>
                  <li>
                      Si vous avez changé d’adresse e-mail et que vous souhaitez retrouver l’accès à votre compte existant, vous pouvez utiliser
                      <a class="btn-link" href="https://tally.so/r/npPpNq">
                          ce formulaire d’aide
                      </a>
                      .
                  </li>
                  <li>
                      Si votre compte était précédemment rattaché à une structure : celle-ci peut être désormais inactive (par exemple en cas de déconventionnement).
                  </li>
                  <li>
                      Si vous avez tenté de vous inscrire en tant que facilitateur des clauses sociales, votre statut est actuellement en cours de vérification, nous reviendrons vers vous dans les plus brefs délais.
                  </li>
                  <li>
                      Si vous souhaitez rejoindre une structure présente sur les Emplois de l’inclusion, vous pouvez demander à un de vos collègues de vous inviter.
                  </li>
                  <li>
                      <form action="/accounts/logout/?next=/signup/" class="js-prevent-multiple-submit" method="post">
                          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                          Si votre structure ne dispose pas encore d’un espace professionnel sur Les Emplois de l’inclusion et que vous souhaitez en créer un :
                          <button aria-label="Se déconnecter" class="btn-link" type="submit">
                              cliquez-ici
                          </button>
                          .
                      </form>
                  </li>
              </ul>
              <p>
                  En cas de besoin, vous pouvez
                  <a class="btn-link has-external-link" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr" target="_blank">
                      contacter notre support technique
                  </a>
                  .
              </p>
              <p>
                  Nous espérons vous revoir et vous rendre service à nouveau.
              </p>
              <div class="row">
                  <div class="col-2">
                      <form action="/accounts/logout/" class="js-prevent-multiple-submit" method="post">
                          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                          <button aria-label="Se déconnecter" class="btn btn-block btn-primary" type="submit">
                              <span>
                                  Se déconnecter
                              </span>
                          </button>
                      </form>
                  </div>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: tests_prescriber_without_organization
  '''
  <div class="s-section__container container">
      <div class="s-section__row row g-0">
          <div class="s-section__col col-12 col-lg-2 bg-lg-white">
              <img alt="" class="img-fluid" loading="lazy" src="/static/img/illustration-error.png"/>
          </div>
          <div class="s-section__col col-12 col-lg-10 bg-lg-white">
              <p>
                  L’accès aux fonctionnalités professionnelles est réservé aux comptes associés à une structure active.
              </p>
              <ul>
                  <li>
                      Si vous avez changé d’adresse e-mail et que vous souhaitez retrouver l’accès à votre compte existant, vous pouvez utiliser
                      <a class="btn-link" href="https://tally.so/r/npPpNq">
                          ce formulaire d’aide
                      </a>
                      .
                  </li>
                  <li>
                      Si votre compte était précédemment rattaché à une structure : celle-ci peut être désormais inactive (par exemple en cas de déconventionnement).
                  </li>
                  <li>
                      Si vous avez tenté de vous inscrire en tant que facilitateur des clauses sociales, votre statut est actuellement en cours de vérification, nous reviendrons vers vous dans les plus brefs délais.
                  </li>
                  <li>
                      Si vous souhaitez rejoindre une structure présente sur les Emplois de l’inclusion, vous pouvez demander à un de vos collègues de vous inviter.
                  </li>
                  <li>
                      <form action="/accounts/logout/?next=/signup/" class="js-prevent-multiple-submit" method="post">
                          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                          Si votre structure ne dispose pas encore d’un espace professionnel sur Les Emplois de l’inclusion et que vous souhaitez en créer un :
                          <button aria-label="Se déconnecter" class="btn-link" type="submit">
                              cliquez-ici
                          </button>
                          .
                      </form>
                  </li>
              </ul>
              <p>
                  En cas de besoin, vous pouvez
                  <a class="btn-link has-external-link" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr" target="_blank">
                      contacter notre support technique
                  </a>
                  .
              </p>
              <p>
                  Nous espérons vous revoir et vous rendre service à nouveau.
              </p>
              <div class="row">
                  <div class="col-2">
                      <form action="/accounts/logout/" class="js-prevent-multiple-submit" method="post">
                          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                          <button aria-label="Se déconnecter" class="btn btn-block btn-primary" type="submit">
                              <span>
                                  Se déconnecter
                              </span>
                          </button>
                      </form>
                  </div>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
